--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -53,7 +53,7 @@
       <section class="whatIdo">
         <h2>Some of my projects</h2>
         <p>Design: Photoshop, Illustrator, Axure, Lucidchart</p>
-        <p>Technical: HTML/CSS, Jade, MEAN (MongoDB, ExpressJS, AngularJS, NodeJS)
+        <p>Technical: HTML/CSS, MEAN (MongoDB, ExpressJS, AngularJS, NodeJS), BackboneJS, ReactJS, Flux, Redux
         <div class="container">
           <figure class="grid-thirds right hideRight delay0">
             <a href="/projects/ParknGo">
@@ -110,10 +110,10 @@
       </section>
       <section class="aboutMe">
             <figure class="bottom hideBottom">
-              <img src="Zhen.jpg">
+              <img src="Zhen2.jpg">
             </figure>
             <p class="large bottom hideBottom">
-              Hi! I'm Zhen (/zen/) and I'm a Graphic/UI/UX designer in San Francisco. I love pushing pixels, designing products, improving my coding abilities and crafting everything from scratch. See my work on my <a href="/projects">portfolio</a>. 
+              Hi! I'm Zhen (/zen/) and I'm a Front End Developer in San Francisco. I love pushing pixels, designing products, improving my coding abilities and crafting everything from scratch. See my work on my <a href="/projects">portfolio</a>. 
             </p>
         <p class="center"><a class="button" href="/about">About Me</a></p>
       </section>
