--- a/views/contact.handlebars
+++ b/views/contact.handlebars
@@ -51,7 +51,7 @@
       <section class="contactMe">
         <h1>Contact Me</h1>
         <p class="centerText bottom hideBottom">
-          I am currently working with a few local businesses and non-profitable organizations as a web application designer/developer, but I am seeking a full time role as a Graphic/UI/UX designer/developer. Please drop a line and say hi :)
+          I am currently a Front End Lead Developer for a startup company, and a freelance developer for a few local businesses, feel free to say hi :)
         </p>
         <form class="container bottom hideBottom">
           <div class="center">
